[package]
name = "steel-repl"
version.workspace = true
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "REPL library for steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "14.0.0", features = ["derive"] }
colored = "3.0.0"
steel-core = { workspace = true }
steel-parser = { path = "../steel-parser", version = "0.6.0"}
env_home = "0.1.0"
ctrlc = "3.4.4"
crossbeam-utils = "0.8.21"

[features]
interrupt = ["steel-core/interrupt"]
