[package]
name = "steel-sys-info"
version = "0.1.0"
edition = "2021"


[lib]
name = "steel_sys_info"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { path = "../steel-core", version = "0.3.0", features = ["modules", "anyhow", "blocking_requests"] }
abi_stable = "0.11.1"
sys-info = "0.9.1"