[package]
name = "steel-toml"
version = "0.1.0"
edition = "2021"

[lib]
name = "steel_toml"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { path = "../steel-core", version = "0.2.0", features = ["modules"] }
toml = "0.7.1"
