[package]
name = "steel-webrequests"
version = "0.1.0"
edition = "2021"

[lib]
name = "steel_webrequests"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { workspace = true }
abi_stable = "0.11.1"
ureq = { version = "2.6.2", features = ["json"] }
