[package]
name = "steel-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { path = "../steel-core" }
axum = "0.6.2"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5.1"