[package]
name = "steel-webserver"
version = "0.1.0"
edition = "2021"

[lib]
name = "steel_webserver"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { path = "../steel-core" }
axum = "0.6.2"
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8.2"