[package]
name = "steel"
version = "0.2.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
im-rc = "15.1.0"
colored = "2.0.0"
# rand = "0.8.1"
codespan-reporting = "0.11.1"
logos = "0.12.1"
itertools = "0.10.5"
log = "0.4.11"
futures = "0.3.17"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_derive = "1.0.137"
bincode = "1.3.3"
pretty = "0.11.3"
# Cranelift JIT
cranelift = { version = "0.84.0", optional = true }
cranelift-module = { version = "0.84.0", optional = true }
cranelift-jit = { version = "0.84.0", optional = true }
# lazy_static = "1.4.0"
im-lists = "0.2.0"
quickscope = "0.2.0"
lasso = { version = "0.6.0", features = ["multi-threaded"] }
once_cell = "1.10.0"
fxhash = "0.2.1"
dlopen = "0.1"
dlopen_derive = "0.1.4"
termimad = "0.14"
smallvec = "1.10.0"
lazy_static = "1.4.0"
steel-gen = { path = "../steel-gen", version = "0.2.0" }

reqwest = { version = "0.11.10", features = ["blocking", "json"], optional = true }
url = { version = "2.2.2", optional = true }
tungstenite = { version = "0.17.2", features = ["rustls-tls-native-roots"], optional = true }

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3.5"
# steel = { path = ".", features = ["modules", "jit"] }
steel = { path = ".", features = ["modules"] }
env_logger = "0.9"

[build-dependencies]
steel-gen = { path = "../steel-gen", version = "0.2.0" }

[features]
# this effectively enable the feature `no-color` of colored when testing with
# `cargo test --features colors_off`
colors_off = ["colored/no-color"]
modules = []
jit = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-jit"]
dynamic = []
profiling = []
web = ["dep:reqwest", "dep:url", "dep:tungstenite"]
# dylibs = ["dep:dlopen", "dep:dlopen_derive"]


[[bench]]
name = "my_benchmark"
harness = false
