[package]
name = "steel-markdown"
edition = "2021"
version = "0.1.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "steel_markdown"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# steel-core = { path = "../../crates/steel-core", version = "0.6.0", features = ["dylibs"] }
steel-core = { workspace = true }

# When developing
# steel-core = { version = "0.6.0", features = ["dylibs"] }

pulldown-cmark = "0.11.2"
abi_stable = "0.11.1"
# For doing syntax highlighting!
syntect = "5.2.0"
