[package]
name = "steel-pty"
version = "0.1.0"
edition = "2021"


[lib]
name = "steel_pty"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-pty = "0.8.1"
steel-core = { workspace = true }
abi_stable = "0.11.1"
strip-ansi-escapes = "0.1.1"
futures = "0.3.26"
tokio = { version = "1.29.1", features = ["sync"]}
# ansitok = "0.2.0"
# ansi-parser = "0.8.0"
termwiz = "0.20.0"
log = "0.4.17"