[package]
name = "steel-pty"
version = "0.1.0"
edition = "2021"


[lib]
name = "steel_pty"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-pty = "0.8.1"
steel-core = { workspace = true }
abi_stable = "0.11.1"
strip-ansi-escapes = "0.1.1"
futures = "0.3.26"
tokio = { version = "1.29.1", features = ["sync"]}
termwiz = { git = "https://github.com/wez/wezterm.git" }
log = "0.4.17"
anyhow = "*"
wezterm-term = { git = "https://github.com/wez/wezterm.git" }
config = { git = "https://github.com/wez/wezterm.git" }
parking_lot = "*"
futures-time = "3.0.0"
