[package]
name = "steel-regex"
edition = "2021"
version.workspace = true
publish = false

[lib]
name = "steel_regex"
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
steel-core = { path = "../../crates/steel-core", version = "0.8.0", features = ["dylibs", "sync"] }
regex = { version = "1.10.3" }

[package.metadata.dist]
dist = false
