[package]
name = "steel-rustls"
edition = "2021"
version.workspace = true

[lib]
name = "steel_rustls"
crate-type = ["rlib", "cdylib"]

[dependencies]
steel-core = { path = "../../crates/steel-core", version = "0.6.0", features = ["dylibs", "sync"] }
abi_stable = "0.11.1"
rustls = "0.23.17"
webpki-roots = "0.26"
flate2 = "1.0.35"

[package.metadata.dist]
dist = false
