[package]
name = "steel-sqlite"
edition = "2021"
version.workspace = true


[lib]
name = "steel_sqlite"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
steel-core = { path = "../../crates/steel-core", version = "0.6.0", features = ["dylibs"] }
rusqlite =  { version = "0.28.0", features = ["bundled"] }
