[package]
name = "steel-sqlite"
edition = "2021"
version.workspace = true
publish = false


[lib]
name = "steel_sqlite"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
# steel-core = { path = "../../crates/steel-core", version = "0.6.0", features = ["dylibs"] }
steel-core = { workspace = true }
rusqlite =  { version = "0.32.1", features = ["bundled", "functions", "load_extension"] }
# rusqlite =  { version = "0.32.1", features = ["functions", "load_extension"] }
# rusqlite =  { version = "0.32.1", features = ["load_extension"] }
